--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "next": "^14.1.0",
+    "ra-data-json-server": "^4.16.10",
     "react": "^18.2.0",
+    "react-admin": "^4.16.10",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1"
   },
